--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,8 @@
 @import './04_components/';
 @import './05_layout/';
 @import './06_pages/';
+
+body {
+  font-size: rem(32);
+  padding: em(16, 14);
+}
