feat: layout 추가

--- a/scss/05_layout/_layout.scss
+++ b/scss/05_layout/_layout.scss
@@ -1,3 +1,14 @@
 // .ediya 컨테이너 레이아웃 시작---------------------------------------------------------- /
+.ediya {
+  @include flexbox(column);
+  min-height: 100vh;
 
+  @at-root .main {
+    flex: 1 1 0;
+  }
+
+  @at-root .footer {
+    margin-top: auto;
+  }
+}
 // .ediya 컨테이너 레이아웃 종료---------------------------------------------------------- /
