--- a/scss/02_utils/_flexbox.scss
+++ b/scss/02_utils/_flexbox.scss
@@ -1,1 +1,5 @@
 // 플렉스 박스 믹스인 ---------------------------------------------------------------- /
+@mixin flexbox($direction: row) {
+  display: flex;
+  flex-direction: $direction;
+}
