--- a/scss/02_utils/_mixins.scss
+++ b/scss/02_utils/_mixins.scss
@@ -1,12 +1,18 @@
 // Float 해제를 위한 clear 스타일 ---------------------------------------------------- /
 
-
 // Auto Margin을 활용한 박스 가운데 정렬 ------------------------------------------------ /
-
+@mixin autoMargin($marginX: auto) {
+  margin-left: $marginX;
+  margin-right: $marginX;
+}
 
 // 요소 박스의 가로 크기를 뷰포트 기준 100vw로 설정 -------------------------------------------- /
 
-
 // 요소 박스의 크기 고정 ----------------------------------------------------------- /
-
-
+@mixin boxFixed($width: 740px, $paddingX: 0) {
+  width: $width;
+  padding-left: $paddingX;
+  padding-right: $paddingX;
+  @include autoMargin();
+  @content;
+}
