--- a/scss/05_layout/_header.scss
+++ b/scss/05_layout/_header.scss
@@ -1,3 +1,21 @@
 // 헤더 시작 ------------------------------------------------------------------------ /
+.header {
+  padding: 2px 0; // 아웃라인 겹치기 때문에 준 것이라 em단위로 변경하지 않음
+  background: $grayscaleWhite;
+  border: 1px solid $grayscaleSnow;
+  box-shadow: 0px 1px 1px rgba($black, 0.1);
 
+  position: sticky;
+  top: 0;
+  z-index: 200;
+
+  // 헤더 inner (740px) ------------------------------------------------------------------------ /
+
+  &__inner {
+    background: #ff0;
+    @include desktop {
+      @include boxFixed; // @content 를 주었기 때문에 mixin안에 mixin 사용 가능
+    }
+  }
+}
 // 헤더 종료 --------------------------------------------------------------------- /
