feat: header__logo 스타일

--- a/scss/02_utils/_mixins.scss
+++ b/scss/02_utils/_mixins.scss
@@ -16,3 +16,15 @@
   @include autoMargin();
   @content;
 }
+
+// 반응형 이미지(비트맵)
+@mixin responsiveImg {
+  max-width: 100%;
+  height: auto;
+}
+
+// 반응형 미디어(벡터, 비디어, iframe)
+@mixin responsiveMedia {
+  width: 100%;
+  height: auto;
+}
