--- a/scss/05_layout/_header.scss
+++ b/scss/05_layout/_header.scss
@@ -12,9 +12,33 @@
   // 헤더 inner (740px) ------------------------------------------------------------------------ /
 
   &__inner {
-    background: #ff0;
+    @include flexbox($justify-content: space-between, $align-items: center);
     @include desktop {
       @include boxFixed; // @content 를 주었기 때문에 mixin안에 mixin 사용 가능
+    }
+  }
+
+  &__logo {
+    background: yellow;
+    width: 176px;
+    @include mobile {
+      width: percentage(176 / 375);
+      max-width: 176px;
+    }
+
+    @include desktop {
+      position: relative;
+      left: em(18px);
+    }
+
+    a {
+      display: block;
+      padding: em(18px);
+    }
+
+    img {
+      background: #fcf;
+      @include responsiveMedia;
     }
   }
 }
