feat: burger button 스타일

--- a/scss/04_components/_button.scss
+++ b/scss/04_components/_button.scss
@@ -1,3 +1,9 @@
 // 버튼 시작 ----------------------------------------------------------------- /
-
+.button {
+  &None {
+    padding: 0;
+    background: transparent;
+    border: 0;
+  }
+}
 // 버튼 종료 ----------------------------------------------------------------- /
