--- a/scss/05_layout/_navigation.scss
+++ b/scss/05_layout/_navigation.scss
@@ -1,3 +1,7 @@
 // 내비게이션 시작 --------------------------------------------------------------------- /
-
+.navigation {
+  @include mobile {
+    display: none; // 잠시 안보이게 설정
+  }
+}
 // 네비게이션 종료 ------------------------------------------------------------------ /
