--- a/scss/02_utils/_a11y.scss
+++ b/scss/02_utils/_a11y.scss
@@ -1,5 +1,5 @@
 // 숨김 제목 및 콘텐츠 --------------------------------------------------------------- /
-@mixin a11yHidden(){
+@mixin a11yHidden() {
   overflow: hidden;
   position: absolute !important;
   clip: rect(0, 0, 0, 0);
@@ -10,8 +10,25 @@
 }
 
 // 숨김 콘텐츠 -------------------------------------------------------------------- /
-.a11yHidden{
+.a11yHidden {
   @include a11yHidden();
 }
 
 // 포커스, 포커스 비저블, 포커스 위드인 ----------------------------------------------------- /
+@mixin focus {
+  &:focus {
+    // 아웃라인 커스텀 디자인
+    outline: 0;
+    border-radius: 2px;
+    box-shadow: 0 0 0 2px rgba($primaryBlue, 1);
+  }
+}
+
+@mixin focusVisible {
+  @include focus;
+  &:not(:focus-visible) {
+    // 접근성 지키면서 클릭시 아웃라인 안보이게 설정
+    box-shadow: none;
+    @content;
+  }
+}
