feat: gnb 메뉴, 닫기 버튼 스타일

--- a/scss/04_components/_icon.scss
+++ b/scss/04_components/_icon.scss
@@ -24,6 +24,13 @@
       background-image: url(../images/button-navigation.svg);
     }
   }
+
+  // 닫기 ------------------------------------------------------------------------ /
+  &Close {
+    &::before {
+      content: '×';
+    }
+  }
 }
 
 // 아이콘 스타일 종료------------------------------------------------------------------ /
